@@ -1,4 +1,4 @@
-# $Id: GNUmakefile,v 1.2 2001-11-06 11:36:20 johna Exp $
+# $Id: GNUmakefile,v 1.3 2001-11-08 21:50:51 perl Exp $
 
 name := G4visHepRep
 
@@ -20,5 +20,6 @@ CPPFLAGS += -I$(G4BASE)/geometry/management/include
 CPPFLAGS += -I$(G4BASE)/geometry/solids/CSG/include
 CPPFLAGS += -I$(G4BASE)/geometry/volumes/include
 CPPFLAGS += -I$(G4BASE)/geometry/solids/specific/include
+CPPFLAGS += -I$(G4BASE)/materials/include
 
 include $(G4INSTALL)/config/common.gmk
